# hyperagent-openai-gateway

./: .env.example  .gitignore  AGENTS.md  Dockerfile  GATEWAY.md  Makefile  README.md  README.vi.md  docker-compose.yml  install.ps1  install.sh  pyproject.toml  reference.html  requirements.txt
docs/: TEST_MATRIX.md
docs/decisions/: 0008-locally-built-harness-cli.md  0009-openai-compatible-gateway-over-mcp.md  0010-stateless-gateway-context-reconstruction.md
docs/en/: 00-index.md  01-overview.md  02-quickstart.md  03-architecture.md  04-api-reference.md  05-tool-bridge.md  06-deployment.md  07-faq.md  08-glossary.md  09-contributing.md
docs/product/: README.md  auth.md  capability-catalog.md  mcp-tool-schemas.json  openai-compatibility.md  overview.md  tool-bridge.md  upstream-mcp.md
docs/stories/: backlog.md
docs/vi/: 00-index.md  01-overview.md  02-quickstart.md  03-architecture.md  04-api-reference.md  05-tool-bridge.md  06-deployment.md  07-faq.md  08-glossary.md  09-contributing.md
gateway/: __init__.py  __main__.py  app.py  auth.py  cli.py  config.py  errors.py  fallbacks.py  identities.py  media.py  oauth.py  schemas.py  state.py  streaming.py  toolbridge.py  translate.py
gateway/upstream/: __init__.py  base.py  manager.py  mcp.py  mock.py
tests/: conftest.py  test_api.py  test_cli.py  test_extras.py  test_multitenant.py  test_openai_sdk.py  test_responses_files.py  test_unit_parsing.py
tools/: oauth_login.py  oauth_remote.py
