[project]
name = "hyperagent-openai-gateway"
version = "0.2.0"
description = "OpenAI-compatible API gateway backed by Hyperagent.com (MCP upstream)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "httpx>=0.27",
  "pydantic>=2.7",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "openai>=1.40"]

[project.scripts]
hyperagent-gateway = "gateway.cli:main"
hga = "gateway.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gateway*"]
